# wdock

./: CMakeLists.txt  Justfile  README.md  TODO.md  config.jsonc  config.kdl  config.txt  imgui.ini  imgui_impl_wayland.hpp  main.cpp  ui.hpp  wayland.cpp  wayland.hpp  window.cpp  window.hpp  wlr-layer-shell-unstable-v1.h
glad/include/glad/: egl.h  gl.h
src/: CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  imgui_impl_wayland.cpp  imgui_impl_wayland.hpp  main.cpp  ui.hpp  utils.hpp  widgets.cpp  widgets.hpp  window.cpp  window.hpp
